--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <h1>Research Paper for Abstract</h1>
     <h3 class="red">Note:</h3>
     <ol>
-        <li>All Researc Papers are assigned in the presence of you or your group member or assigned by sir Zaffar, I am not responsible for the any kind of the assignment of any research paper to any student!</li>
+        <li>All Research Papers are assigned in the presence of you or your group member or assigned by sir Zaffar, I am not responsible for the any kind of the assignment of any research paper to any student!</li>
         <li>Sir Zaffar Said: "You should write the abstract on paper word by word as it is!"</li>
         <li>If your name is not included in the List please contect to Mr.Aazan Arain (Vice CR)</li>
     </ol>
