--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             { topic: "Dexterous", student: "Humaira" },
             { topic: "Advanced Morphological", student: "Iman Murad" },
             { topic: "Self-Powered Single Multifunctional", student: "Inayat" },
-            { topic: "Tetrapods", student: "Israr" },
+            { topic: "HCI in Mobile Learning", student: "Israr" },
             { topic: "Heptics feedback", student: "Jai prakash" },
             { topic: "Adoptive Drift Compensation", student: "Javeria" },
             { topic: "Aeroheptix", student: "Jeetash" },
