--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
             margin-bottom: 20px;
         }
 
+        .center {
+            text-align: center;
+        }
+
         .red {
             color: red;
         }
@@ -70,10 +74,11 @@
 </head>
 <body>
     <h1>Research Paper for Abstract</h1>
+    <h3 class="center">BSCS 7th Sec(A)</h3>
     <h3 class="red">Note:</h3>
     <ol>
-        <li>All Research Papers are assigned in the presence of you or your group member or assigned by sir Zaffar, I am not responsible for the any kind of the assignment of any research paper to any student!</li>
-        <li>Sir Zaffar Said: "You should write the abstract on paper word by word as it is!"</li>
+        <li>Click on your topic name to download your research paper.</li>
+        <li>All Research Papers are assigned in the presence of you or your group member, I am not responsible for the any kind of the assignment of any research paper to any student!</li>
         <li>If your name is not included in the List please contect to Mr.Aazan Arain (Vice CR)</li>
     </ol>
     <div class="table-container">
