--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
     <h3 class="red">Note:</h3>
     <ol>
         <li>Click on your topic name to download your research paper.</li>
-        <li>All Research Papers are assigned in the presence of you or your group member, I am not responsible for the any kind of the assignment of any research paper to any student!</li>
-        <li>If your name is not included in the List please contect to Mr.Aazan Arain (Vice CR)</li>
+        <li>All research papers are assigned in the presence of you or your group member, I am not responsible for the any kind of the assignment of any research paper to any student!</li>
+        <li>If your name is not included in the list please contect to Mr.Aazan Arain (Vice CR)</li>
     </ol>
     <div class="table-container">
         <table>
